<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.euler</groupId>
    <artifactId>euler</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Euler - Parent</name>
    <url>https://github.com/euler-io/euler</url>

    <modules>
        <module>euler-core</module>
        <module>euler-common</module>
        <module>euler-file</module>
        <module>euler-tika</module>
        <module>euler-elasticsearch</module>
        <module>euler-cluster</module>
    </modules>

    <scm>
        <connection>scm:git:https://github.com/euler-io/euler.git</connection>
        <developerConnection>scm:git:https://github.com/euler-io/euler.git</developerConnection>
        <tag>HEAD</tag>
    </scm>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <downloadSources>true</downloadSources>
        <downloadJavadocs>true</downloadJavadocs>
        <akka.version>2.6.3</akka.version>
        <java.version>1.8</java.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.12</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
